Active material not retained when reordering material slots #101013

Closed
opened 2022-09-12 18:04:38 +02:00 by Ovionis · 5 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-10 23:06, hash: 1f4dc51d09
Worked: (newest version of Blender that worked as expected)

Short description of error
Premise:
When you add a material to an object, it generally goes in the first slot, and then is assigned to all the mesh faces.
When you move the material slots of an object, that first material SHOULD stay assigned to the faces until you manually reassign their material.

Problem:
When you move the material slot, the mesh faces stay assigned to the first slot unless you manually assign the material in edit mode.

Exact steps for others to reproduce the error
Add an object and put some materials on it, then move the material slot down, and watch the material shown on the mesh change.
This is a cube with 3 materials:
3 mats.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-10 23:06, hash: `1f4dc51d09` Worked: (newest version of Blender that worked as expected) **Short description of error** **Premise:** When you add a material to an object, it generally goes in the first slot, and then is assigned to all the mesh faces. When you move the material slots of an object, that first material SHOULD stay assigned to the faces until you manually reassign their material. **Problem:** When you move the material slot, the mesh faces stay assigned to the first slot unless you manually assign the material in edit mode. **Exact steps for others to reproduce the error** Add an object and put some materials on it, then move the material slot down, and watch the material shown on the mesh change. This is a cube with 3 materials: [3 mats.blend](https://archive.blender.org/developer/F13484526/3_mats.blend)
Author

Added subscriber: @Phigon

Added subscriber: @Phigon
Hans Goudey self-assigned this 2022-09-12 21:14:07 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by ad245f1970

This issue was referenced by ad245f1970343ed41098ed9611a38b167fd757d4
Member

Thanks for reporting!

Thanks for reporting!
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101013
No description provided.